MTX-164
develop xml2csv compute